--- a/index.html
+++ b/index.html
@@ -89,23 +89,30 @@
                 <h4>Account Manager</h4>
                 <p>
                     Managed a portfolio of key accounts, fostering strong relationships and ensuring client satisfaction.
-                    Collaborated with internal teams, including sales, marketing, customer support, warehouse, and purchasing teams to deliver client specific solutions.
+                    Collaborated with internal teams, including sales, marketing, customer support, warehouse, and purchasing teams to deliver solutions tailored to each client and circumstance.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2022 – May 2023">
+                <h3>Apoena Construction</h3>
+                <h4>Site Supervisor</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Supervised daily construction activities, ensuring projects were completed on time, within budget, and according to specifications.
+                    Coordinated and managed on-site personnel, subcontractors, and vendors, fostering a collaborative and productive work environment.
+                    Developed and maintained project schedules, monitoring progress and addressing any deals or issues promptly. 
+                    Managed procurement of materials and equipment, ensuring timely delivery and availability for uninterrupted workflow.
+                    Enforced safety protocols and conducted safety meetings, resulting in a zero-accident record on multiple projects.
+                    Prepared and submitted daily reports, tracking project milestones, labor, materials and costs.
+	                Conducted quality control inspections, ensuring all work met or exceeded industry standards and client expectations.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2021 – June 2022">
+                <h3>Fabricator</h3>
+                <h4>Diamante</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Operated and maintained specialized machinery and tools, including saws, grinders, and polishers, to cut, shape, and finish stone materials.
+                    Interpreted blueprints and technical drawings to fabricate stone products according to exact specifications.
                 </p>
             </div>
         </div>
@@ -115,30 +122,12 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Online Resources - Udemy, Coursera, Youtube, Google, ChatGPT, Boot.dev, Freemote Shopify Development</h3>
+            <span class="education-date">May 2020 - Present</span>
+            <h4>Programming, Netowrking, A+, Security+</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                Utilized several platforms to learn github, web development, IT administration and now studying Security and Cloud
             </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
         </div>
         <!-- End .education-block -->
     </div>
@@ -189,30 +178,14 @@
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
             <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>ChatGPT</li>
+            <li>MidJourney</li>
+            <li>Security+</li>
+            <li>A+</li>
+            <li>Network+</li>
         </ul>
     </div>
     <!-- End #skills -->
