--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        With 3 years studying programming and now working on security & MS Azure, I am looking to make a change from Managing Accounts/Sales to assisting companies with their fundamental IT neads!
+                        With 3 years studying programming and now working on security & MS Azure, I am looking to make a change from Managing Accounts/Sales to assisting companies with their fundamental IT needs!
                     </p>
                 </div>
             </div>
@@ -89,6 +89,8 @@
                 <h4>Account Manager</h4>
                 <p>
                     Managed a portfolio of key accounts, fostering strong relationships and ensuring client satisfaction.
+                </p>
+                <p>
                     Collaborated with internal teams, including sales, marketing, customer support, warehouse, and purchasing teams to deliver solutions tailored to each client and circumstance.
                 </p>
             </div>
@@ -98,13 +100,26 @@
                 <h4>Site Supervisor</h4>
                 <p>
                     Supervised daily construction activities, ensuring projects were completed on time, within budget, and according to specifications.
-                    Coordinated and managed on-site personnel, subcontractors, and vendors, fostering a collaborative and productive work environment.
-                    Developed and maintained project schedules, monitoring progress and addressing any deals or issues promptly. 
-                    Managed procurement of materials and equipment, ensuring timely delivery and availability for uninterrupted workflow.
-                    Enforced safety protocols and conducted safety meetings, resulting in a zero-accident record on multiple projects.
-                    Prepared and submitted daily reports, tracking project milestones, labor, materials and costs.
-	                Conducted quality control inspections, ensuring all work met or exceeded industry standards and client expectations.
                 </p>
+                <p>
+                    Coordinated and managed on-site personnel, subcontractors, and vendors, fostering a collaborative and productive work environment.
+                </p>
+                <p>
+                    Developed and maintained project schedules, monitoring progress and addressing any deals or issues promptly. 
+                </p>
+                <p>
+                    Managed procurement of materials and equipment, ensuring timely delivery and availability for uninterrupted workflow. 
+                </p>
+                <p>
+                    Enforced safety protocols and conducted safety meetings, resulting in a zero-accident record on multiple projects.
+                </p>
+                <p>
+                    Prepared and submitted daily reports, tracking project milestones, labor, materials and costs.
+                </p>
+                <p>
+                    Conducted quality control inspections, ensuring all work met or exceeded industry standards and client expectations.
+                </p>
+                
             </div>
 
             <div data-date="August 2021 – June 2022">
@@ -112,6 +127,8 @@
                 <h4>Diamante</h4>
                 <p>
                     Operated and maintained specialized machinery and tools, including saws, grinders, and polishers, to cut, shape, and finish stone materials.
+                </p>
+                <p>
                     Interpreted blueprints and technical drawings to fabricate stone products according to exact specifications.
                 </p>
             </div>
